crates/sifr_python_parser/tests/snapshots/invalid_syntax@global_stmt_empty.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/err/global_stmt_empty.py
---
## AST

```
Module(
    ModModule {
        range: 0..7,
        body: [
            Global(
                StmtGlobal {
                    range: 0..6,
                    names: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | global
  |       ^ Syntax Error: Global statement must have at least one name
  |
